--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "carsdekho-clone",
+  "name": "carmessy",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -15,7 +15,7 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-slideshow-image": "^3.5.0",
     "sass": "^1.42.0",
     "web-vitals": "^1.1.2"
