--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "16.4.2"
+    "node": "22.x"
   },
   "dependencies": {
     "@emotion/react": "^11.4.1",
